@@ -14,27 +14,27 @@ public class DepartmentsTest {
 
     @Test
     public void whenMissed() {
-        List<String> input = Arrays.asList("K1/SK1/SSK1");
-        List<String> expected = Arrays.asList("K1", "K1/SK1", "K1/SK1/SSK1");
+        List<String> input = List.of("K1/SK1/SSK1");
+        List<String> expected = List.of("K1", "K1/SK1", "K1/SK1/SSK1");
         List<String> result = Departments.fillGaps(input);
         assertThat(result, is(expected));
     }
 
     @Test
     public void whenNonChange() {
-        List<String> input = Arrays.asList("K1", "K1/SK1", "K1/SK1/SSK1");
-        List<String> expected = Arrays.asList("K1", "K1/SK1", "K1/SK1/SSK1");
+        List<String> input = List.of("K1", "K1/SK1", "K1/SK1/SSK1");
+        List<String> expected = List.of("K1", "K1/SK1", "K1/SK1/SSK1");
         List<String> result = Departments.fillGaps(input);
         assertThat(result, is(expected));
     }
 
     @Test
     public void sortAsc() {
-        List<String> input = Arrays.asList("K1/SK1", "K1", "K1/SK1/SSK2", "K2/SK1/SSK2",
+        List<String> input = List.of("K1/SK1", "K1", "K1/SK1/SSK2", "K2/SK1/SSK2",
                 "K1/SK1/SSK1", "K2/SK1", "K2/SK1/SSK1", "K2", "K1/SK2", "K2/SK1/SSK1",
                 "K2", "K1/SK2", "K1/SK1", "K1", "K1/SK1/SSK2"
         );
-        List<String> expected = Arrays.asList("K1", "K1/SK1", "K1/SK1/SSK1", "K1/SK1/SSK2",
+        List<String> expected = List.of("K1", "K1/SK1", "K1/SK1/SSK1", "K1/SK1/SSK2",
                 "K1/SK2", "K2", "K2/SK1", "K2/SK1/SSK1", "K2/SK1/SSK2");
         List<String> result = Departments.fillGaps(input);
         Departments.sortAsc(result);
@@ -43,11 +43,11 @@ public class DepartmentsTest {
 
     @Test
     public void sortDesc() {
-        List<String> input = Arrays.asList("K1/SK1", "K1", "K1/SK1/SSK2", "K2/SK1/SSK2",
+        List<String> input = List.of("K1/SK1", "K1", "K1/SK1/SSK2", "K2/SK1/SSK2",
                 "K1/SK1/SSK1", "K2/SK1", "K2/SK1/SSK1", "K2", "K1/SK2", "K2/SK1/SSK1",
                 "K2", "K1/SK2", "K1/SK1", "K1", "K1/SK1/SSK2"
         );
-        List<String> expected = Arrays.asList("K2", "K2/SK1", "K2/SK1/SSK1", "K2/SK1/SSK2",
+        List<String> expected = List.of("K2", "K2/SK1", "K2/SK1/SSK1", "K2/SK1/SSK2",
                 "K1", "K1/SK1", "K1/SK1/SSK1", "K1/SK1/SSK2", "K1/SK2");
         List<String> result = Departments.fillGaps(input);
         Departments.sortDesc(result);
