@@ -14,12 +14,12 @@ public class NotifyAccountTest {
 
     @Test
     public void sent() {
-        List<Account> accounts = Arrays.asList(
+        List<Account> accounts = List.of(
                 new Account("123", "Petr Arsentev", "eDer3432f"),
                 new Account("321", "Petr Arsentev", "000001")
         );
         HashSet<Account> expected = new HashSet<>(
-                Arrays.asList(
+                List.of(
                         new Account("123", "Petr Arsentev", "eDer3432f"),
                         new Account("321", "Petr Arsentev", "000001")
                 )
@@ -29,7 +29,7 @@ public class NotifyAccountTest {
 
     @Test
     public void sentWithDuplicates() {
-        List<Account> accounts = Arrays.asList(
+        List<Account> accounts = List.of(
                 new Account("123", "Petr Arsentev", "eDer3432f"),
                 new Account("123", "Petr Arsentev", "eDer3432f"),
                 new Account("321", "Petr Arsentev", "000001"),
@@ -37,7 +37,7 @@ public class NotifyAccountTest {
                 new Account("321", "Petr Arsentev", "000001")
         );
         HashSet<Account> expected = new HashSet<>(
-                Arrays.asList(
+                List.of(
                         new Account("123", "Petr Arsentev", "eDer3432f"),
                         new Account("321", "Petr Arsentev", "000001")
                 )
